move the mypy stuff to pyproject.toml, and add a notebooks directory

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,11 +27,27 @@ develop = [
   "pylint",
   "autoflake",
   "pre-commit",
+  "jupyterlab",
 ]
 build_docs = [
   "mkdocs-material",
   "mkdocstrings[python]",
 ]
 
+# This is required to allow us to have notebooks/ at the top level.
+[tool.setuptools]
+py-modules = ["python_pkg_template"]
+
 [tool.isort]
 profile = "black"
+
+[tool.mypy]
+python_version = 3.8
+warn_return_any = true
+warn_unused_configs = true
+
+# # Uncomment this when you have imports for mypy to ignore.
+# [[tool.mypy.overrides]]
+# module = [
+# ]
+# ignore_missing_imports = true
