--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,20 @@ license = {file = "LICENSE.txt"}
 authors = [
   {email = "baeisner@andrew.cmu.edu", name = "Ben Eisner"}
 ]
-dependencies = []
+dependencies = [
+  "numpy >= 1.22.4",
+  "torch >= 1.11.0",
+  "pytorch-lightning >= 1.6.4",
+  "typer >= 0.4.0",
+  "torch-scatter >= 2.0.9",
+  "torch-sparse >= 0.6",
+  "torch-cluster >= 1.6.0",
+  "torch-spline-conv >= 1.2.1",
+  "torch-geometric >= 2.0",
+  "rpad-partnet-mobility-utils[pybullet] @ git+https://github.com/r-pad/partnet_mobility_utils",
+  "rpad-visualize-3d @ git+https://github.com/r-pad/visualize_3d",
+  "rpad-pyg @ git+https://github.com/r-pad/pyg_libs",
+]
 
 [build-system]
 requires = [
