--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,21 @@ authors = [
   {email = "baeisner@andrew.cmu.edu", name = "Ben Eisner"}
 ]
 dependencies = [
+  "gym",
+  "h5py",
   "numpy >= 1.22.4",
+  "open3d",
+  "opencv-python",
   "pandas",
+  "pybullet",
+  "pyransac3d",
   "pytorch-lightning >= 1.6.4",
+  "pytransform3d",
   "rpad-partnet-mobility-utils[pybullet] @ git+https://github.com/r-pad/partnet_mobility_utils",
   "rpad-pyg @ git+https://github.com/r-pad/pyg_libs",
   "rpad-visualize-3d @ git+https://github.com/r-pad/visualize_3d",
+  "sapien; sys_platform == 'linux'",
+  "scipy",
   "torch >= 1.11.0",
   "typer >= 0.4.0",
   "torch-scatter >= 2.0.9",
@@ -22,6 +31,7 @@ dependencies = [
   "torch-cluster >= 1.6.0",
   "torch-spline-conv >= 1.2.1",
   "torch-geometric >= 2.0",
+  "trimesh",
   "tqdm",
   "wandb",
 ]
@@ -66,8 +76,19 @@ warn_unused_configs = true
 # Uncomment this when you have imports for mypy to ignore.
 [[tool.mypy.overrides]]
 module = [
-  "torch_geometric.*",
-  "plotly.*",
+  "cv2.*",
+  "h5py.*",
+  "open3d.*",
+  "mani_skill.*",
+  "mani_skill_learn.*",
   "pandas.*",
+  "plotly.*",
+  "pybullet.*",
+  "pyransac3d.*",
+  "pytransform3d.*",
+  "sapien.*",
+  "scipy.*",
+  "torch_geometric.*",
+  "trimesh.*",
 ]
 ignore_missing_imports = true
