--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,17 +10,18 @@ authors = [
 ]
 dependencies = [
   "numpy >= 1.22.4",
-  "torch >= 1.11.0",
   "pytorch-lightning >= 1.6.4",
+  "rpad-partnet-mobility-utils[pybullet] @ git+https://github.com/r-pad/partnet_mobility_utils",
+  "rpad-pyg @ git+https://github.com/r-pad/pyg_libs",
+  "rpad-visualize-3d @ git+https://github.com/r-pad/visualize_3d",
+  "torch >= 1.11.0",
   "typer >= 0.4.0",
   "torch-scatter >= 2.0.9",
   "torch-sparse >= 0.6",
   "torch-cluster >= 1.6.0",
   "torch-spline-conv >= 1.2.1",
   "torch-geometric >= 2.0",
-  "rpad-partnet-mobility-utils[pybullet] @ git+https://github.com/r-pad/partnet_mobility_utils",
-  "rpad-visualize-3d @ git+https://github.com/r-pad/visualize_3d",
-  "rpad-pyg @ git+https://github.com/r-pad/pyg_libs",
+  "wandb",
 ]
 
 [build-system]
@@ -33,14 +34,14 @@ build-backend = "setuptools.build_meta"
 
 [project.optional-dependencies]
 develop = [
-  "pytest",
+  "autoflake",
   "black >= 22.3.0",
   "isort",
-  "mypy",
-  "pylint",
-  "autoflake",
-  "pre-commit",
   "jupyterlab",
+  "mypy",
+  "pre-commit",
+  "pylint",
+  "pytest",
 ]
 build_docs = [
   "mkdocs-material",
@@ -63,5 +64,6 @@ warn_unused_configs = true
 [[tool.mypy.overrides]]
 module = [
   "torch_geometric.*",
+  "plotly.*",
 ]
 ignore_missing_imports = true
