--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,7 @@ warn_unused_configs = true
 [[tool.mypy.overrides]]
 module = [
   "cv2.*",
+  "gym.*",
   "h5py.*",
   "open3d.*",
   "mani_skill.*",
