--- a/flowbot3d/grasping/env/assets/config_files/robots/floating_gripper.yml
+++ b/flowbot3d/grasping/env/assets/config_files/robots/floating_gripper.yml
@@ -1,4 +1,4 @@
-agent_class: "flowbot3d.grasping.agent.agent.FloatingGripperAgent"
+agent_class: "flowbot3d.grasping.env.agent.FloatingGripperAgent"
 name: "floating_gripper"
 urdf_file: "../../../../../../third_party/where2act/code/robots/panda_gripper.urdf"
 control_frequency: 100
