add a bunch of dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,23 @@ authors = [
   {email = "baeisner@andrew.cmu.edu", name = "Ben Eisner"}
 ]
 dependencies = [
-  "numpy >= 1.22.4",
+  "gif",
+  "gym <= 0.20.0",
+  "h5py",
+  "numpy <= 1.23.1",
+  "open3d",
+  "opencv-python",
   "pandas",
+  "pybullet",
+  "pyransac3d",
   "pytorch-lightning >= 1.6.4",
+  "pytransform3d",
   "rpad-partnet-mobility-utils[pybullet] @ git+https://github.com/r-pad/partnet_mobility_utils",
   "rpad-pyg @ git+https://github.com/r-pad/pyg_libs",
   "rpad-visualize-3d @ git+https://github.com/r-pad/visualize_3d",
+  "sapien == 1.1.0; sys_platform == 'linux'",
+  "scipy",
+  "shapely",
   "torch >= 1.11.0",
   "typer >= 0.4.0",
   "torch-scatter >= 2.0.9",
@@ -22,6 +33,8 @@ dependencies = [
   "torch-cluster >= 1.6.0",
   "torch-spline-conv >= 1.2.1",
   "torch-geometric >= 2.0",
+  "transforms3d",
+  "trimesh",
   "tqdm",
   "wandb",
 ]
