--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -37,6 +37,9 @@ jobs:
       - name: Install package
         run: pip install "${{ inputs.install_string }}"
 
+      - name: Install maniskill.
+        run: pip install ./third_party/ManiSkill
+
       - name: Code Quality
         run: python -m black ${{ inputs.pkgname }} tests/ --check
 
