--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: 'true'
 
       ##############################################
       # Skip caching if using a local runner.
@@ -36,6 +38,9 @@ jobs:
 
       - name: Install package
         run: pip install "${{ inputs.install_string }}"
+
+      - name: Install maniskill.
+        run: pip install -e ./third_party/ManiSkill
 
       - name: Code Quality
         run: python -m black ${{ inputs.pkgname }} tests/ --check
