behavior cloning code, no guarantee that it works

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,10 +82,13 @@ module = [
   "cv2.*",
   "gif.*",
   "gym.*",
+  "h5py.*",
   "mani_skill.*",
+  "mani_skill_learn.*",
   "open3d.*",
   "pandas.*",
   "plotly.*",
+  "pyransac3d.*",
   "sapien.*",
   "scipy.*",
   "torch_geometric.*",
