--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -42,6 +42,9 @@ jobs:
       - name: Install maniskill.
         run: pip install -e ./third_party/ManiSkill
 
+      - name: Install maniskill-learn.
+        run: pip install -e "git+https://github.com/haosulab/ManiSkill-Learn.git#egg=mani-skill-learn"
+
       - name: Code Quality
         run: python -m black ${{ inputs.pkgname }} tests/ --check
 
