--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,3 +91,6 @@ module = [
   "torch_geometric.*",
 ]
 ignore_missing_imports = true
+
+[tool.pytest.ini_options]
+addopts = "--ignore=third_party/"
