--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
     rev: v3.2.0
     hooks:
     -   id: trailing-whitespace
-        exclude: "tests/testdata/"
+        exclude: "(tests/testdata/|README.md)"
     -   id: end-of-file-fixer
         exclude: "tests/testdata/"
     -   id: check-yaml
