--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 pretrained filter=lfs diff=lfs merge=lfs -text
 pretrained/model.ckpt filter=lfs diff=lfs merge=lfs -text
+pretrained/model_nomask_vpa.ckpt filter=lfs diff=lfs merge=lfs -text
